# ForceLoop

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
.omc/: project-memory.json
.omc/plans/: add-claude-stop-hook.md  add-omp-target-to-setup.md  checklist-gate-and-audit-report.md  command-metadata-narrow-to-commands.md  command-metadata-skeleton.md  command-schema-and-compiler.md  constants-and-utils-skeleton.md  fl-prefix-commands-and-prompt-fix.md  implement-archive-subcommand.md  implement-new-execute-specs.md  improve-new-plan-audit-prompts.md  one-wave-per-implement.md  opencode-session-idle-gate-hook.md  phase-specific-gate-errors.md  register-new-as-cli-subcommand.md  remove-tryfinish.md  rename-hook-to-fl.md  setup-excludes-self.md  setup-opencode-hook-correction.md  setup-tool-flag.md  setup-writes-skills.md  update-audit-execute-and-prompts.md  update-plan-execute-and-prompts.md  wiki-link-validator.md
.omc/sessions/: 155ee8f7-1192-40f2-913f-f466f08fa79a.json  277d895d-14f1-46a0-8c91-b3acee51b143.json  2e87e361-3f74-45de-883b-40e70d04db88.json  (+11 more)
.sisyphus/: boulder.json
docs/: command-format-comparison.html  opencode-hook-spec-correction.md  requirment.md
npm/darwin-x64/: package.json
plugin/: claude-hook.sh  fl.ts  hook.ts  omp-fl-gate.ts
scripts/: build-npm.sh  publish-npm.sh
src/: archive.rs  cli.rs  compiler.rs  constants.rs  context.rs  errors.rs  gate.rs  lib.rs  main.rs  schema.rs  setup.rs  state.rs  status.rs  traits.rs  utils.rs
tests/: cli_help.rs  command_compile.rs  setup_tool.rs
(+36 files in other folders)
