[package]
name = "forceloop"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for structured development workflow"
default-run = "fl"
license = "MIT"
repository = "https://github.com/ipconfiger/ForceLoop"
homepage = "https://github.com/ipconfiger/ForceLoop"
keywords = ["cli", "workflow", "pipeline", "development", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "fl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
